2005-06-03 14:16 Mike Park  <mike.park@nasa.gov>

	* This revision marks an addition to the API to support valid adaptation
	* src/gridfortran.c (gridconstrainsurfacenode_) added to expose 
	gridConstrainSurfaceNode to adapt on surf without gridmove projection.

2005-06-03 13:58 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmoothNodeMinJacDet2Simplex) removed, use
	gridSmoothNodeVolumeSimplex now.
	* src/gridcad.c (gridSmartVolumeLaplacian) uses
	gridNodeMinCellJacDet2 as the cost function if gridCOST_CNST_VALID
	bit is set in gridCostConstraint.
	* src/unit_main.c (gridSmoothInvalidCellNodes) calls
	gridSmoothNodeVolumeSimplex and gridSmartVolumeLaplacian now.
	
2005-06-03 13:06 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmoothNodeVolumeSimplex) uses
	gridNodeMinCellJacDet2 as the cost function if gridCOST_CNST_VALID
	bit is set in gridCostConstraint.

2005-06-03 09:05 Mike Park  <mike.park@nasa.gov>

	* This revision marks an addition to the API to support valid adaptation
	* src/gridfortran.c (gridsetcostconstraint_) added to directly expose 
	the cost constraints.

2005-06-01 11:39 Mike Park  <mike.park@nasa.gov>

	* src/gridshape.c (gridNodeMinCellJacDet2) smallest jacobian determine
	in an incident tetrahedron.
	* src/gridcad.c (gridSmoothNodeMinJacDet2Simplex) simplex search
	to improve the smallest jacobian determinate of incident tetrahedra.
	* src/unit_main.c (gridSmoothInvalidCellNodes) driver for validating
	via node movement.

2005-06-01 11:39 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeRatio, gridCollapseEdge) interpolate
	and evaluate edge t, face uv, and xyz in a consistent manner
	when gridSurfaceNodeConstrained true.

2005-06-02 10:10 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.7 Release. ** internal release ** Snapshot after
	Toronto paper, before `valid' adaptation research.

2005-06-02 08:50 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridResolveOnFace) added to expose