@@ -1,3 +1,11 @@
+2005-06-05 12:15 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridfortran.c (gridParallelRelaxNegativeCells) replaced the
+	negative cell around a node test with negative gridNodeAR test
+	to include all cost constriants (including validity).
+	--> will be slower <--, need to make a seperate constraint testing
+	function.
+
 2005-06-03 14:16 Mike Park  <mike.park@nasa.gov>
 
 	* This revision marks an addition to the API to support valid adaptation
